# fastapi-ext

./: .gitignore  404.html  README.md  config.default.json  index.html  mkdocs.yml  pyproject.toml
docs/: auth.md  index.md  session.md
example/: app.py
example/models/: base.py  users.py
fastapi_ext/: __init__.py  app.py  appinfo.py  forms.py  lifespan.py  logger.py  schema.py  settings.py  templating.py  unique_id.py
fastapi_ext/auth/: __init__.py  di.py  models.py  password.py  repositories.py  routes.py  schemas.py  security.py  services.py  settings.py  testconfig.py  token.py
fastapi_ext/auth/templates/: login.html
fastapi_ext/auth/tests/: test_routes.py
fastapi_ext/cli/: main.py  typer.py
fastapi_ext/openid/: __init__.py  models.py  repositories.py  routes.py  schemas.py  security.py  services.py  settings.py  token.py
fastapi_ext/openid/templates/: login.html
fastapi_ext/pytest/: plugin.py
fastapi_ext/session/: __init__.py  di.py  lifespan.py  session.py
fastapi_ext/session/tests/: test_inmemory_storage.py
fastapi_ext/sqla/: __init__.py  alembic.ini  cli.py  di.py  engine.py  entity_manager.py  env.py  lifespan.py  model.py  repository.py  schema.py  settings.py  testconfig.py
install/: index.html
search/: search_index.json
session/: index.html
