[tool.poetry]
name = "fapi-ext"
version = "0.1.1"
description = ""
authors = ["Mike Oz <kozloffsky@hotmail.com>"]
readme = "README.md"
packages = [
  { include = "fastapi_ext" }
]

[tool.poetry.scripts]
fext = "fastapi_ext.cli.main:app"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
email-validator = "^2.1.1"
jinja2 = "^3.1.3"
mkdocs = "^1.5.3"
python-multipart = "^0.0.9"
typer = "^0.12.3"
asyncclick = "^8.1.7.2"


[tool.poetry.group.sqla.dependencies]
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"


[tool.poetry.group.server.dependencies]
uvicorn = "^0.29.0"


[tool.poetry.group.test.dependencies]
aiosqlite = "^0.20.0"


[tool.poetry.group.auth.dependencies]
pwdlib = {extras = ["argon2", "bcrypt"], version = "^0.2.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.extras]
sqla = ["sqlalchemy"]
auth = ["pwdlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
